[package]
name = "nuttx-test-bot"
version = "1.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Bot that Builds and Tests Pull Requests for Apache NuttX RTOS"
homepage = "https://lupyuen.org/articles/testbot.html"
repository = "https://github.com/lupyuen/nuttx-test-bot"
readme = "README.md"
keywords = ["nuttx", "rtos", "ci"]
categories = ["command-line-utilities"]

[dependencies]
bit-vec = "0.8.0"
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
octocrab = "0.39.0"
regex = "1.11.1"
reqwest = "0.12.9"
serde_json = "1.0.133"
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.4"
